--- a/roles/airflow/tasks/main.yml
+++ b/roles/airflow/tasks/main.yml
@@ -1,51 +1,64 @@
 ---
 # tasks file for airflow
+#1
 - name: Python3 installation
   yum: 
     name: python3 
     state: latest
   when: "ansible_os_family == 'Redhat'"
 
+#1
 - name: Python3-pip installation
   yum: 
     name: python3-pip 
     state: latest
   when: "ansible_os_family == 'Redhat'"
 
+#3
 - name: Create directory {{AIRFLOW_HOME}} 
   file:
-    path: {{AIRFLOW_HOME}}
+    path: "{{AIRFLOW_HOME}}"
     state: directory
-  
+
+#4
 - name: Airflow user creation
   user: 
     name: airflow
     group: airflow 
     uid: 1001
-    home: {{AIRFLOW_HOME}}
+    home: "{{AIRFLOW_HOME}}"
 
 - name: Apache Airflow installation
   pip: 
     name: apache-airflow 
     state: latest
 
+#9d
 - name: Mount log LVM
   ansible.posix.mount:
-    path: {{AIRFLOW_HOME}}/logs
+    path: "{{AIRFLOW_HOME}}"/logs
     src: /dev/mapper/vg01-logs
     fstype: xfs
     opts: rw,auto,noexec,user
     state: present
 
+#9d
 - name: Mount dags LVM
   ansible.posix.mount:
-    path: {{AIRFLOW_HOME}}/dags
+    path: "{{AIRFLOW_HOME}}"/dags
     src: /dev/nvme1n1p1
     fstype: ext4
     opts: rw,auto,exec,user
     state: present
 
-- name: enable verbose mode
+#10
+- name: Properties changes for dags directory
+  file: 
+    path: "{{AIRFLOW_HOME}}"/dags 
+    mode: 1644
+
+#11
+- name: basic_auth setup
   ini_file: 
     dest: /etc/setting.conf 
     section: api 
@@ -53,11 +66,7 @@
     value: airflow.api.auth.backend.basic_auth
     backup: yes
 
-- name: Properties changes for dags directory
-  file: 
-    path: {{AIRFLOW_HOME}}/dags 
-    mode: 1644
-
+#14
 name: Start Systemd Unit's
   systemd:
     name: '{ item }}.service'
