--- a/roles/airflow/tasks/main.yml
+++ b/roles/airflow/tasks/main.yml
@@ -67,7 +67,7 @@
     backup: yes
 
 #14
-name: Start Systemd Unit's
+- name: Start Systemd Unit's
   systemd:
     name: '{ item }}.service'
     state: started
