--- a/roles/airflow/tasks/main.yml
+++ b/roles/airflow/tasks/main.yml
@@ -7,6 +7,12 @@
     state: latest
   when: "ansible_os_family == 'Redhat'"
 
+- name: Install and upgrade pip
+  pip:
+    name: pip
+    extra_args: --upgrade
+    executable: pip3
+
 #1
 - name: Python3-pip installation
   yum: 
