--- a/roles/airflow/tasks/main.yml
+++ b/roles/airflow/tasks/main.yml
@@ -7,18 +7,18 @@
     state: latest
   when: "ansible_os_family == 'Redhat'"
 
-- name: Install and upgrade pip
-  pip3:
-    name: pip
-    extra_args: --upgrade
-    executable: pip3
-
 #1
 - name: Python3-pip installation
   yum: 
     name: python3-pip 
     state: latest
   when: "ansible_os_family == 'Redhat'"
+
+- name: Install and upgrade pip
+  pip:
+    name: pip
+    extra_args: --upgrade
+    executable: /usr/local/bin/pip
 
 #3
 - name: Create directory {{AIRFLOW_HOME}} 
